# DitDetector

./: .gitignore  LICENSE  README.md  environment.yaml
data/bimodal_res/: epoch_100_joint_model.pt
data/test_data/: docText.csv
src/BiModal/: bimodal_infer.py  bimodal_preprocess.py  bimodal_train.py
src/DitDetector/: basic_func.py  ditDetector.py
src/MobileNetV3/: mobilenet_infer.py  train.py
src/MobileNetV3/cvtransforms/: cvfunctional.py  cvtransforms.py
src/TextCNN/: text_preprocess_doc.py  textcnn_infer.py  textcnn_train.py
src/oit_linux_8.5.4/: README  makedemo.sh
src/oit_linux_8.5.4/redist/: libfreetype.so.6  oilink
src/oit_linux_8.5.4/sdk/common/: sccex.h  sccvw_u.h  verbuild.h
src/oit_linux_8.5.4/sdk/demo/: exporter  exredir  exsimple  extract_archive  ix.cfg  ixanno  ixmulti  ixsample
src/oit_linux_8.5.4/sdk/resource/: makefile  scclo_u.h  scclostr_u.cpp
src/oit_linux_8.5.4/sdk/samplecode/exjava/api/: CMakeLists.txt
src/oit_linux_8.5.4/sdk/samplecode/exjava/api/src/: CMakeLists.txt
src/oit_linux_8.5.4/sdk/samplecode/exjava/api/src/com/outsideinsdk/: Export.java  ExportFormat.java  ExportProperties.java  ExportResources.java  ExportStatusCode.java  ExportThread.java
src/oit_linux_8.5.4/sdk/samplefiles/: access.mdb  amidraw-bitmap.sdw  annotate.doc  appointment.msg  arabic.doc  autodesk-autocad.dxf  base14fonts.doc  corel-presentation.shw  corel-wordperfect.wpd  embeddings.doc  excel2007.xlsx  html.htm  lotus-123.123  lotus-freelance.prz  lotus123.123  macintosh-pict.pct  marketing.eml  micrografx-designer.drw  microsoft-excel.xls  (+8 more)
(+39 files in other folders)
