##########################################################################
# Copyright (c) 2010, Oracle.  All rights reserved.
#
# NAME
#   outsidein/OIT_CVOB/samples/exjava/api/CMakeLists.txt
#
# DESCRIPTION
#   This file is used to build the ExJava API jar file.
#
# EXPORT FUNCTIONS
#
# INTERNAL FUNCTIONS
#
# NOTES
#
# MODIFIED  (MM/DD/YY)
#    mjryan  02/14/14 - Adding CMake build scripts.
#
############################################################################

add_subdirectory(src)
